# jets

./: Cargo.toml
examples/: full.rs
src/app/: config.rs  dns.rs  mod.rs  proxy.rs  router.rs
src/common/: log.rs  mod.rs
src/proxy/: dns.rs  mod.rs  net_manager.rs  shadowsocks.rs  trojan.rs
src/proxy/http/: http_client.rs  http_service.rs  http_stream.rs  mod.rs  utils.rs
src/proxy/socks/: mod.rs  socks4.rs  socks5.rs
src/proxy/tun/: mod.rs  tcp.rs  udp.rs  virt_device.rs
src/proxy/vless/: mod.rs  stream.rs  xtls.rs
src/transport/: tls.rs  ws.rs
