[package]
name = "jets"
version = "0.4.3"
edition = "2024"
description = "A Rust rule-based tunnel"
homepage = "https://github.com/zhangsan946/jets"
repository = "https://github.com/zhangsan946/jets"
documentation = "https://docs.rs/jets"
authors = ["San Zhang <sanzhang@mail.com>"]
license = "Apache-2.0"
readme = "README.md"
rust-version = "1.89"

exclude = ["src/bin/**", "examples/**", ".github/**"]

[features]
default = ["inbound-http", "inbound-tun", "outbound-trojan"]

inbound-http = ["base64", "pin-project", "tokio-rustls"]
inbound-tun = ["cfg-if", "etherparse", "ipnet", "smoltcp", "spin", "tun"]
outbound-trojan = ["hex", "sha2"]

[dependencies]
async-trait = "^0.1"
blake3 = "^1.8"
bytes = "^1.0"
chrono = "^0.4"
clap = { version = "^4.5", features = ["derive"] }
colored = "^3.0"
env_filter = "0.1.3"
futures = "0.3"
hyper = { version = "^1.7", features = ["full"] }
http-body-util = "^0.1"
hickory-resolver = "^0.25"
hyper-util = { version = "^0.1", features = ["full"] }
log = "0.4"
lru_time_cache = { version = "0.11" }
once_cell = "1.20"
prost = "^0.14"
rand = "^0.9"
regex = "^1.11"
rustls = { version = "^0.23", features = [
    "logging",
    "ring",
    "std",
    "tls12",
], default-features = false }
#rustls-native-certs = "0.8"
rustls-pki-types = "1.11.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "^1.0"
shadowsocks = { version = "^1.23", features = [
    "aead-cipher-2022",
    "security-replay-attack-detect",
] }
shadowsocks-crypto = { version = "^0.6", default-features = false }
shadowsocks-service = { version = "^1.23", default-features = false, features = [
    "local-socks4",
] }
tokio = { version = "^1.47", features = [
    "net",
    "io-util",
    "macros",
    "rt",
    "signal",
    "sync",
] }
tokio-tungstenite = "0.27"
trait-variant = "0.1"
tungstenite = { version = "0.27", default-features = false }
uuid = { version = "^1.18", features = ["v5"] }
webpki-roots = "^1.0"

# http inbound
base64 = { version = "^0.22", optional = true }
pin-project = { version = "^1.1", optional = true }
tokio-rustls = { version = "^0.26", optional = true, features = [
    "logging",
    "ring",
    "tls12",
], default-features = false }

# tun inbound
cfg-if = { version = "^1.0", optional = true }
etherparse = { version = "^0.19", optional = true }
ipnet = { version = "2.10", optional = true }
smoltcp = { version = "^0.12", optional = true, default-features = false, features = [
    "std",
    "log",
    "medium-ip",
    "proto-ipv4",
    "proto-ipv4-fragmentation",
    "proto-ipv6",
    "socket-icmp",
    "socket-udp",
    "socket-tcp",
    "socket-tcp-cubic",
] }
spin = { version = "0.10", optional = true }
[target.'cfg(any(target_os = "ios", target_os = "macos", target_os = "linux", target_os = "android", target_os = "windows", target_os = "freebsd"))'.dependencies]
tun = { version = "^0.8", optional = true, features = ["async"] }

# trojan outbound
hex = { version = "0.4", optional = true }
sha2 = { version = "0.10", optional = true }

[target.'cfg(windows)'.dependencies]
windows-sys = { version = "^0.60", features = [
    "Win32_System_Console",
    "Win32_Foundation",
] }

[build-dependencies]
prost-build = "^0.14"
